# video-generator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
templates/: index.html
utils/: chorus_extractor.py  emotion_audio.py  emotion_lyrics.py  postprocess.py  prompt_gen.py  test.py  transcribe.py  video_gen.py
