[project]
name = "genai-video"
version = "0.1.0"
description = "Flask app for audio-to-video generation"

requires-python = ">=3.10,<3.11"

[tool.poetry]
name = "genai-video"
version = "0.1.0"
description = "GenAI Video Generator"
authors = ["Jay West"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
